--- a/Cg/pom.xml
+++ b/Cg/pom.xml
@@ -13,6 +13,27 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
+  <build>
+  
+  <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.0.0-M4</version>
+        <configuration>
+          <suiteXmlFiles>
+            <suiteXmlFile>testng.xml</suiteXmlFile>
+          </suiteXmlFiles>
+          
+         <!--  <systemPropertyVariables>
+          <executebrowser>${browser}</executebrowser>
+          </systemPropertyVariables> -->
+        </configuration>
+      </plugin>
+    
+</plugins>
+  
+  </build>
 
   <dependencies>
 <dependency>
@@ -20,7 +41,7 @@
     <artifactId>selenium-java</artifactId>
     <version>3.141.59</version>
 </dependency>
-<!-- https://mvnrepository.com/artifact/org.testng/testng -->
+
 <dependency>
     <groupId>org.testng</groupId>
     <artifactId>testng</artifactId>
